[tool.poetry]
name = "repl_python3_YPHS-HW"
version = "0.1.0"
description = ""
authors = ["bydebug <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
websockets = "^9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
